tests/snapshots/normalize__insta_normalize_combined_chars.snap
---
source: tests/normalize.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  manana                                                                        "
"  mañana                                                                        "
"  senor                                                                         "
"> señor                                                                         "
"  4/4                                                                        0/0"
">                                                                               "
cursor: (24, 3)
