tests/snapshots/normalize__insta_normalize_combined_chars@001.snap
---
source: tests/normalize.rs
description: "input: items [\"señor\", \"senor\", \"mañana\", \"manana\"]\noptions: --normalize"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  manana                                                                        "
"  mañana                                                                        "
"  senor                                                                         "
"> señor                                                                         "
"  4/4                                                                        0/0"
">                                                                               "
cursor: (24, 3)
