tests/snapshots/normalize__insta_normalize_combined_chars@002.snap
---
source: tests/normalize.rs
description: "input: items [\"señor\", \"senor\", \"mañana\", \"manana\"]\noptions: --normalize\nafter:\n  @type \"senor\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  senor                                                                         "
"> señor                                                                         "
"  2/4                                                                        0/0"
"> senor                                                                         "
cursor: (24, 8)
