tests/snapshots/normalize__insta_normalize_combined_chars@003.snap
---
source: tests/normalize.rs
description: "input: items [\"señor\", \"senor\", \"mañana\", \"manana\"]\noptions: --normalize\nafter:\n  @ctrl 'w'\n  @type \"manana\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  manana                                                                        "
"> mañana                                                                        "
"  2/4                                                                        0/0"
"> manana                                                                        "
cursor: (24, 9)
