tests/snapshots/normalize__insta_normalize_cyrillic-2.snap
---
source: tests/normalize.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  Слово                                                                         "
"> слово                                                                         "
"  2/2                                                                        0/0"
"> слово                                                                         "
cursor: (24, 8)
