tests/snapshots/normalize__insta_normalize_cyrillic.snap
---
source: tests/normalize.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  Слово                                                                         "
"> слово                                                                         "
"  2/2                                                                        0/0"
">                                                                               "
cursor: (24, 3)
