tests/snapshots/normalize__insta_normalize_cyrillic@001.snap
---
source: tests/normalize.rs
description: "input: items [\"слово\", \"Слово\"]\noptions: --normalize"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  Слово                                                                         "
"> слово                                                                         "
"  2/2                                                                        0/0"
">                                                                               "
cursor: (24, 3)
