tests/snapshots/normalize__insta_normalize_cyrillic@002.snap
---
source: tests/normalize.rs
description: "input: items [\"слово\", \"Слово\"]\noptions: --normalize\nafter:\n  @type \"слово\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  Слово                                                                         "
"> слово                                                                         "
"  2/2                                                                        0/0"
"> слово                                                                         "
cursor: (24, 8)
