tests/snapshots/normalize__insta_normalize_exact_match-2.snap
---
source: tests/normalize.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  cafeína                                                                       "
"  cafe                                                                          "
"> café                                                                          "
"  3/3                                                                        0/0"
"> 'cafe                                                                         "
cursor: (24, 8)
