tests/snapshots/normalize__insta_normalize_exact_match@001.snap
---
source: tests/normalize.rs
description: "input: items [\"café\", \"cafe\", \"cafeína\"]\noptions: --normalize"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  cafeína                                                                       "
"  cafe                                                                          "
"> café                                                                          "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
