tests/snapshots/normalize__insta_normalize_exact_match@002.snap
---
source: tests/normalize.rs
description: "input: items [\"café\", \"cafe\", \"cafeína\"]\noptions: --normalize\nafter:\n  @type \"'cafe\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  cafeína                                                                       "
"  cafe                                                                          "
"> café                                                                          "
"  3/3                                                                        0/0"
"> 'cafe                                                                         "
cursor: (24, 8)
